# SweetShot

./: .gitignore  CMakeLists.txt  README.md  README_zh.md  SweetShot.md
3dparty/: README.md
3dparty/catch2/: METADATA  sweetshot_3p.cmake
3dparty/cmakerc/: sweetshot_3p.cmake
3dparty/fonts/: README.md
3dparty/lodepng/: LICENSE  METADATA  sweetshot_3p.cmake
3dparty/lunasvg/: LICENSE  METADATA  sweetshot_3p.cmake
3dparty/resvg/: LICENSE  METADATA  sweetshot_3p.cmake
3dparty/sweetline/: sweetshot_3p.cmake
cli/: main.cpp
cmake/: SweetShotThirdParty.cmake  linux-aarch64-toolchain.cmake
include/sweetshot/: input.h  rasterizer.h  renderer.h  scene.h  sweetshot.h  theme.h
scripts/: build-release.ps1  build-release.sh
skill/sweetshot-code-screenshot/: SKILL.md
skill/sweetshot-code-screenshot/agents/: openai.yaml
skill/sweetshot-code-screenshot/syntaxes/: abnf.json  asm-aarch64.json  asm-att.json  asm-intel.json  asm-riscv.json  astro.json  baml.json  batch.json  bazel.json  bend.json  bicep.json  brainfuck.json  cangjie.json  clojure.json  cmake.json  csv.json  cue.json  diff.json  dockerfile.json  dts.json  elisp.json  elixir.json  env.json  erlang.json  fsharp.json  gitignore.json  glsl.json  go-mod.json  go-sum.json  gradle-kts.json  gradle.json  graphql.json  haskell.json  hcl.json  hlsl.json  http.json  iapp.json  ini.json  jasm.json  jinja2.json  (+45 more)
src/: lunasvg_rasterizer.cpp  renderer.cpp  resvg_rasterizer.cpp  theme.cpp
tests/: CMakeLists.txt  smoke_test.cpp  tests_main.cpp  visual_regression_test.cpp
